gke-cross-cluster-connectivity/multiple-cluster/istio/app2/istio-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-app2-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80    # internet facing port
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-app2-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-app2-gateway
  http:
  - match:
    - uri:
        exact: /app2
    # - uri:
    #     prefix: /static
    # - uri:
    #     exact: /login
    # - uri:
    #     exact: /logout
    # - uri:
    #     prefix: /api/v1/products
    route:
    - destination:
        host: istio-app2
        port:
          number: 9999
